# rimag-assistant-platform

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  init.sql  pyproject.toml
app/: __init__.py  main.py
app/api/routes/: __init__.py  admin.py  ai_proxy.py  his_push.py  websocket_manager.py
app/core/: __init__.py  auth.py  config.py  database.py  logging.py  trace.py
app/models/: database_models.py
app/schemas/: __init__.py  admin_schemas.py  ai_schemas.py  his_schemas.py  websocket_schemas.py
app/services/: ai_service.py  auth_service.py  his_service.py  permission_service.py  session_service.py  test_net_assistant.py  trace_service.py  websocket_service.py
test/: his-simulator.html
